<resources>
    <string name="app_name">MyBookkeeper</string>
    <string name="title_activity_add_book">AddBookActivity</string>


    <string name="title_activity_book_list">BookListActivity</string>
    <string name="search_for_your_favorite_book">Search for your favorite book!</string>
    <string name="isbn">Enter ISBN</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
    <string name="year">Year</string>
    <string name="add_book">ADD BOOK!</string>
    <string name="view_my_books">VIEW MY BOOKS!</string>
    <string name="search_result">- Search Result -</string>

    <!--- Variable strings used for the add book activity -->
    <string name="title_add"> </string>
    <string name="author_add"> </string>
    <string name="publisher_and_year_add"> </string>

    <string name="go">Go!!!</string>
    <string name="book_cover">book cover</string>
    <string name="book_cover_content_description">book cover</string>
    <string name="title_list">Title</string>
    <string name="author_list">author</string>
    <string name="publisher_year_list">anything · anything</string>
    <string name="publisher_list">anything</string>
    <string name="year_list">anything</string>
    <string name="search_author">Search Author</string>
    <string name="number_of_books">%1$d books</string>
</resources>