<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/publisher_list"
        android:layout_width="270dp"
        android:layout_height="25dp"

        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/publisher_list"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@id/book_cover"
        app:layout_constraintTop_toBottomOf="@+id/author_list" />

    <TextView
        android:id="@+id/year_list"
        android:layout_width="270dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/year_list"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@id/book_cover"
        app:layout_constraintTop_toBottomOf="@+id/publisher_list" />

    <ImageView
        android:id="@+id/book_cover"
        android:layout_width="101dp"
        android:layout_height="139dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/book_cover_content_description"
        app:srcCompat="@drawable/download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/title_list"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_list"
        android:layout_width="270dp"
        android:layout_height="54dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/title_list"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/book_cover"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/author_list"
        android:layout_width="270dp"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/author_list"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@id/book_cover"
        app:layout_constraintTop_toBottomOf="@+id/title_list" />

</androidx.constraintlayout.widget.ConstraintLayout>